# udemy-agentic-ai-krishnaik

./: .gitignore  README.md  pyproject.toml
4_Pydantic/demopydantic/: demo_pydantic.py  intro.ipynb
5_LangChain/5.1_DataIngestion/: 1_DataIngestion.ipynb
5_LangChain/5.2_DataTransform/: 1_TextSplitter.ipynb
