[project]
name = "udemy-agentic-ai-krishnaik"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=2.2.0",
    "bs4>=0.0.2",
    "jupyter>=1.1.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-text-splitters>=0.3.9",
    "langgraph>=0.5.4",
    "pandas>=2.3.1",
    "pydantic>=2.11.7",
    "pymupdf>=1.26.4",
    "pypdf>=6.0.0",
    "python-dotenv>=1.1.1",
    "wikipedia>=1.4.0",
]
